Changelog
=========


3.6.3 (unreleased)
------------------

- Nothing changed yet.


3.6.2 (2017-03-02)
------------------

- Fix default tab for HTTPS. [mbaechtold]


3.6.1 (2017-03-01)
------------------

- Fix default tab for HTTPS. [jone]


3.6.0 (2016-12-06)
------------------

- Change markup of batching so it can be styled more easily.
  [mbaechtold]

- Template API breakage - renamed slot 'content-title' to 'tabbedview-content-title'
  [Rotonen]

- Minor Chameleon compatibility fixes.
  [Rotonen]


3.5.4 (2016-10-18)
------------------

- Fix tabbedview history.
  [Kevin Bieri]


3.5.3 (2016-09-27)
------------------

- Fix NameError in tabebdview macros. [jone]


3.5.2 (2016-09-26)
------------------

- Chameleon support: make macros access lazy. [jone]

- Check for searchbox value when a tabbedview page gets reloaded.
  [phgross]


3.5.1 (2016-08-23)
------------------

- Extract tabbedview's allowed attributes in to an interface.
  [phgross]

- Move uploadbox above tabbedview menu
  [Kevin Bieri]

- Change Regex in parse_param. Only match decimal characters, since parseFloat may return wrong results when confronted with an int.
  [tschanzt]


3.5.0 (2016-03-07)
------------------

- Drop support for Plone 4.1.x.
  [deiferni]

- Respect permissions defined on tabs during tab-lookup.
  Replaces adapter lookup with traversal to make sure that permissions
  defined on a tab are respected.
  [deiferni]

- Handle when the client gets a response from different source than a tabbed-view.
  By default show a message that the tab could not be loaded successfully. This can
  be customized by registering a different event handler.
  [deiferni]


3.4.3 (2016-02-15)
------------------

- Prevent reload loop when requesting non-existing tab. [jone]


3.4.2 (2015-09-01)
------------------

- Add fallback in tabbedview initalization, when passed index of
  oneBeforeClick event is incorrect.
  [phgross]

- Fix javascript error in IE10 when no default index is defined.